# Ternary

./: .replit  GITHUB-REPOSITORY-ARCHITECTURE.md  PQTI-P0-STATUS.md  PQTI-REMAINING-WORK.md  codecov.yml  package-lock.json  package.json  replit.md
attached_assets/: 01_KERNEL_MEMORY_1770393712169.md  02_SYNC_PRIMITIVES_1770393744259.md  03_PROCESS_MANAGEMENT_1770393712169.md  04_MODAL_SECURITY_1770393712169.md  05_CRYPTOGRAPHY_1770393712169.md  06_DEVICE_FRAMEWORK_1770393712167.md  07_IO_SUBSYSTEM_1770393712168.md  08_FILESYSTEM_1770393712168.md  09_TORSION_NETWORK_1770393712168.md  10_NETWORK_PROTOCOLS_1770393712168.md  11_TVM_1770393712168.md  12_TIMING_PROTOCOL_1770393712168.md  13_BTG_1770393712168.md  GETTING_STARTED_1770393797227.md  (+34 more)
client/: index.html
github-push/: .gitleaks.toml  Makefile
src/kernel/: COVERAGE.md  Cargo.toml  README.md
src/kernel/benches/: ternary_ops.rs
src/kernel/src/: error.rs  lib.rs  phase.rs  ternary.rs  timing.rs
src/kernel/src/arch/: aarch64.rs  boot.rs  mod.rs  riscv64.rs  x86_64.rs
src/kernel/src/compat/: adapter.rs  gateway.rs  mod.rs
src/kernel/src/crypto/: hash.rs  hmac.rs  kdf.rs  mod.rs  signature.rs  sponge.rs
src/kernel/src/device/: bus.rs  dma.rs  interrupt.rs  mod.rs  registry.rs
src/kernel/src/drivers/: femtoclock.rs  mod.rs  tpu.rs
src/kernel/src/fs/: dir.rs  file.rs  inode.rs  mod.rs  mount.rs
src/kernel/src/hptp/: certification.rs  mod.rs  optical.rs  protocol.rs
src/kernel/src/io/: block.rs  buffer.rs  chardev.rs  mod.rs  poll.rs  scheduler.rs
src/kernel/src/memory/: allocator.rs  heap.rs  mod.rs  page.rs
src/kernel/src/network/: mod.rs  routing.rs  t3p.rs  tdns.rs  torus.rs  ttp.rs
src/kernel/src/process/: context.rs  ipc.rs  mod.rs  scheduler.rs  table.rs
src/kernel/src/security/: audit.rs  capability.rs  domain.rs  mod.rs  policy.rs
src/kernel/src/sync/: mod.rs  mutex.rs  phase_mutex.rs  semaphore.rs  spinlock.rs
src/kernel/src/vm/: engine.rs  gc.rs  instruction.rs  mod.rs
src/thdl/: Cargo.toml  README.md
src/thdl/src/: ir.rs  lib.rs  optimizer.rs  synthesizer.rs  timing.rs
src/tsl/: Cargo.toml  README.md
src/tsl/examples/: README.md  femtosecond_timing.tsl  hello_ternary.tsl  phase_encryption.tsl  tryte_math.tsl
src/tsl/src/: ast.rs  compiler.rs  lexer.rs  lib.rs  parser.rs
(+153 files in other folders)
